# decorator-ai

./: .gitignore  AGENTS.md  README.html  README.md  SYSTEM.MD  firestore.rules  pubspec.yaml  test_qdrant.py
ai-service/: .env.example  .gitignore  Dockerfile  Makefile  SETUP.md  SYSTEM.md  docker-compose.yml  labeler.py  pyproject.toml
ai-service-spring/: HELP.md  (+4 more)
ai-service/app/: main.py
ai-service/app/ai/: vertex_client.py
ai-service/app/core/: config.py
ai-service/app/layout/: __init__.py  collision.py  constraints.py  planner.py  scoring.py  zones.py
ai-service/app/rendering/: __init__.py  base.py  external_renderer.py  factory.py  gemini_image_renderer.py  masks.py  mock_inpaint_renderer.py  overlay_renderer.py  prompts.py
ai-service/app/schemas/: ai_outputs.py  design_job.py  room.py
ai-service/app/services/: design_service.py
ai-service/app/storage/: local_storage.py
ai-service/app/utils/: composite.py  perspective.py  scoring.py  store_names.py
ai-service/app/vector/: collections.py  product_indexer.py  product_search.py
ai-service/app/workers/: rq_worker.py
ai-service/furniture-crawler/: run_all.py
ai-service/furniture-crawler/furniture_crawler/: items.py  pipelines.py  settings.py
ai-service/migrations/versions/: 0002_enrich_product_columns.py
ai-service/scripts/: import_enriched.py
ai-service/tests/unit/: test_empty_room_logic.py  test_layout.py  test_perspective.py  test_placement.py  test_product_filter.py  test_providers.py  test_rendering.py  test_schemas.py  test_scoring_v2.py  test_storage.py  test_validate_result.py
(+136 files in other folders)
