[project]
name = "ai-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy",
  "psycopg[binary]",
  "alembic",
  "redis",
  "rq",
  "qdrant-client",
  "langgraph",
  "langchain-core",
  "google-auth",
  "requests",
  "python-multipart",
  "pillow",
  "opencv-python-headless",
  "numpy",
  "tenacity",
  "orjson",
  "structlog",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
